--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "illuminate/database": "^8.41",
         "illuminate/http": "^8.41",
         "illuminate/support": "^8.41",
+        "illuminate/view": "^8.41",
         "spatie/laravel-package-tools": "^1.7"
     },
     "require-dev": {
